<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.teamOverview.TeamOverviewFragment">

        <ImageView
            android:id="@+id/imgBadge"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            app:srcCompat="@drawable/ic_no_data" />

        <TextView
            android:id="@+id/teamName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgBadge"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:text="@string/dummy_club" />
        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/teamName"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:text="@string/dummy_date" />
        <TextView
            android:id="@+id/tvStadium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDate"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:text="@string/dummy_time" />

        <TextView
            android:id="@+id/tvManager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvStadium"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"
            android:textSize="14sp"
            tools:text="@string/dummy_name" />

        <android.support.v7.widget.CardView
            android:id="@+id/ovwContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvManager"
            app:cardElevation="@dimen/small_margin"
            android:layout_margin="@dimen/small_margin"
            android:fadingEdgeLength="@dimen/small_margin"
            android:elevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvManager"
                android:orientation="vertical"
                android:paddingBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/overview"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:layout_marginRight="@dimen/small_margin"
                    android:background="#9b9898" />

                <TextView
                    android:id="@+id/teamOverview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginRight="@dimen/small_margin"
                    android:text="@string/dummy_name"
                    android:textColor="#000000"
                    android:textSize="13sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>