<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/matchFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:id="@+id/card_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        app:cardCornerRadius="@dimen/medium_margin"
        app:cardElevation="@dimen/tiny_margin"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/dateEvent"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        >
        <TextView
            android:id="@+id/date"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/dummy_date"/>
        <ImageView
            android:id="@+id/eventCalender"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_notification_24dp"/>
    </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="5dp"
            >
            <RelativeLayout
                android:id="@+id/timeEvent"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                >
                <TextView
                    android:id="@+id/time"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/dummy_time"/>
                  </RelativeLayout>
            <LinearLayout
                android:layout_below="@+id/timeEvent"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/medium_margin"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/tiny_margin"
                >
                <TextView
                    android:layout_weight="0.6"
                    android:id="@+id/ID_HOME_TEAM"
                    android:textColor="@color/md_black_1000"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:text="@string/dummy_club"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/tiny_margin"/>
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/ID_HOME_SCORE"
                    android:textColor="@color/md_grey_800"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:text="@string/dummy_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_weight="0.9"
                    android:textColor="@color/md_grey_700"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:text="@string/dummy_vs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/ID_AWAY_SCORE"
                    android:textColor="@color/md_grey_800"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:text="@string/dummy_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_weight="0.6"
                    android:layout_marginLeft="@dimen/tiny_margin"
                    android:id="@+id/ID_AWAY_TEAM"
                    android:textColor="@color/md_black_1000"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:text="@string/dummy_club"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>