<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detailteam.player.detailplayer.DetailPlayerActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_detail_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="0dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/medium_large_margin"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/imageBannerPlayer"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@color/md_grey_300"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:layout_marginTop="@dimen/medium_margin"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".fragment.teamOverview.TeamOverviewFragment">

            <TextView
                android:id="@+id/name_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:textColor="#000000"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:text="@string/dummy_name" />

            <TextView
                android:id="@+id/national_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_player"
                android:layout_centerHorizontal="true"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="@string/dummy_time" />

            <TextView
                android:id="@+id/team_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/national_player"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:textColor="#000000"
                android:textSize="14sp"
                tools:text="@string/dummy_club" />

            <RelativeLayout
                android:id="@+id/detail_player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/team_player"
                android:layout_marginBottom="@dimen/medium_margin">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/weight_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="@string/dummy_weight"
                            android:textAlignment="center"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/weight_player"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/weight_title"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/huge_margin"
                            android:text="@string/dummy_score"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/huge_font_size" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/height_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="@dimen/medium_large_margin"
                            android:text="@string/dummy_height"
                            android:textAlignment="center"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/height_player"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/height_title"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/huge_margin"
                            android:text="@string/dummy_score"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/huge_font_size" />
                    </RelativeLayout>


                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_player"
                android:layout_margin="@dimen/small_margin"
                android:orientation="vertical"
                android:paddingBottom="12dp">

                <TextView
                    android:id="@+id/position_Player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/overview"
                    android:textColor="#000000"
                    android:textSize="@dimen/medium_plus_margin"
                    android:textStyle="bold" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:layout_marginRight="@dimen/small_margin"
                    android:background="#9b9898" />

                <TextView
                    android:id="@+id/description_player"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginRight="@dimen/small_margin"
                    android:text="@string/dummy_name"
                    android:textColor="#000000"
                    android:textSize="@dimen/medium_font_size" />

            </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>