<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/search_team_activity"
    tools:context=".view.search.team.activity.SerchTeamActivity">
    <include
        android:id="@+id/toolbar_main_1"
        layout="@layout/appbar_main" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_main_1">

        <LinearLayout
            android:id="@+id/allLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/md_grey_200"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    tools:background="@color/md_grey_200" />

                <RelativeLayout
                    android:id="@+id/emptyDataView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible">

                    <ImageView
                        android:id="@+id/image_nodata"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_no_data" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/image_nodata"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:padding="8dp"
                        android:text="@string/no_data" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/noconectionView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible">

                    <ImageView
                        android:id="@+id/image_noconectionView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/no_internet" />

                    <TextView
                        android:id="@+id/text_no_internet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/image_noconectionView"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:padding="8dp"
                        android:text="@string/no_connection" />

                    <Button
                        android:id="@+id/refreshButton"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_below="@+id/text_no_internet"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/back_button"
                        android:text="@string/Refresh"
                        android:textColor="@color/md_white_1000" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>